-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 120108) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z[.R]][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = micro version  - small changes to major.minor version (optional)
  R = revision       - urgent fixes to normal releases (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

Howto for reading the entries:

  added/removed = a new/removed feature, interfaces, or new 
                  implementation of some feature
  changed       = changed behaviour, modified implementation, APIs, etc
  fixed         = fixed bugs, "features" and other sources of problems
  [foobar]      = tag identifying the author of the change author, see 
	          README for a complete list contributor tags; entries 
		  with no tags are from the main author(s)

-----------------------------------------------------------------------

????2008 (v2.4.z) -** stable release **-
	- added: ecasound.el: added missing ECI commands cs-option, 
	         cs-set-length, cs-set-position-samples, ai-get-length,
		 ai-set-position, and ai-set-position-samples [dto,
	  	 mlang]
14082007 (v2.4.6.1) -** stable release **-
 	- fixed: extra debugging, printed to stderr, for resource file 
		 values was accidentally left enabled in the 2.4.6 release
14082007 (v2.4.6)  -** stable release **-
	- added: new option '-R:path-to-resource-file' to use a custom
		 resource file and disable querying of global and user
		 resource files; as a special case, by setting this 
		 to '/dev/null', one disable all access to resource 
		 files; requested by Klaus Schulz and Keith Creasy
	- added: eiam - new command 'resource-file'; see ecasoundrc(5)